# flowhunt-toolkit

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: README_DEVELOPMENT.md
flowhunt_toolkit/: __init__.py  cli.py
flowhunt_toolkit/core/: __init__.py  chart_generator.py  client.py  evaluator.py  liveagent_client.py  report_generator.py
flowhunt_toolkit/utils/: __init__.py  docx_processor.py  logger.py  markdown_processor.py  pdf_processor.py  web_processor.py
tests/: __init__.py  test_batch_processing.py  test_cli.py  test_evaluator.py
