[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flowhunt-toolkit"
version = "0.1.0"
description = "A Toolkit for FlowHunt Flow Engineers to streamline the process of Developing Flows in FlowHunt for Advanced FlowHunt Users Flow Engineers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "FlowHunt Flow Engineers"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "flowhunt>=3.0.0",
    "tqdm>=4.60.0",
    "rich>=13.0.0",
    "plotly>=5.0.0",
    "jinja2>=3.0.0",
    "tiktoken>=0.5.0",
    "pypdf>=3.0.0",
]

[project.scripts]
flowhunt = "flowhunt_toolkit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/QualityUnit/flowhunt-dev-toolkit"
Repository = "https://github.com/QualityUnit/flowhunt-dev-toolkit"
Issues = "https://github.com/QualityUnit/flowhunt-dev-toolkit/issues"

[tool.setuptools.packages.find]
include = ["flowhunt_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
